Expr/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Piccolo'", "'Intero'", "'Flottante'", 
                     "'Doppio'", "'Grande'", "'Carattere'", "'Booleano'", 
                     "'Vero'", "'Falso'", "'Funzione'", "'inizio'", "'fine'", 
                     "'se'", "<INVALID>", "'altrimenti'", "'per'", "'a''", 
                     "'mentre'", "'continua'", "'ferma'", "'ritorna'", "'eccezione'", 
                     "'principale'", "'no'", "'Scriviere'", "'Caricare'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\"'", "<INVALID>", 
                     "'$'", "'+'", "'-'", "'*'", "'/'", "'%'", "':='", "'='", 
                     "'<='", "'>='", "'!='", "'>'", "'<'", "'|'", "'&'", 
                     "'>>'", "'<<'", "'^'", "'e''", "'o''", "'non'", "'('", 
                     "')'", "'['", "']'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "SHORT_TP", "INT_TP", "FLOAT_TP", "DOUBLE_TP", 
                      "LONG_TP", "CHAR_TP", "BOOL_TP", "BOOLEAN_TRUE_LIT", 
                      "BOOLEAN_FALSE_LIT", "FUNCTION_KW", "BEGIN_KW", "END_KW", 
                      "IF_KW", "DO_KW", "ELSE_KW", "FOR_KW", "TO_KW", "WHILE_KW", 
                      "CONTINUE_KW", "BREAK_KW", "RETURN_KW", "EXCEPTION_KW", 
                      "MAIN_KW", "NO_KW", "WRITE_KW", "READ_KW", "IDENTIFIER", 
                      "INTEGER_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "TEXT_IN_QUOTES", 
                      "QUOT_MARK", "WS", "PARAMETER", "ADD_MATH_OP", "SUB_MATH_OP", 
                      "MUL_MATH_OP", "DIV_MATH_OP", "MOD_MATH_OP", "ASSIGN_OP", 
                      "EQUAL_BOOL_OP", "LESS_EQ_BOOL_OP", "GREATER_EQ_BOOL_OP", 
                      "NOT_EQ_BOOL_OP", "GREATER_BOOL_OP", "LESS_BOOL_OP", 
                      "OR_BIT_OP", "AND_BIT_OP", "RIGHT_SHIFT_BIT_OP", "LEFT_SHIFT_BIT_OP", 
                      "XOR_BIT_OP", "AND_LOGICAL_OP", "OR_LOGICAL_OP", "NOT_LOGICAL_OP", 
                      "LEFT_PAREN", "RIGHT_PAREN", "LEFT_SQUARE", "RIGHT_SQUARE", 
                      "COMMA", "SEMICOLON" ]

    RULE_program = 0
    RULE_main_function_definition = 1
    RULE_function_definition = 2
    RULE_parameter_list = 3
    RULE_parameter = 4
    RULE_type_specifier = 5
    RULE_function_body = 6
    RULE_write_function = 7
    RULE_read_function = 8
    RULE_statement = 9
    RULE_simple_statement = 10
    RULE_complex_statement = 11
    RULE_statement_in_loop = 12
    RULE_simple_statement_in_loop = 13
    RULE_complex_statement_in_loop = 14
    RULE_local_variable_declaration = 15
    RULE_assignment_statement = 16
    RULE_function_call = 17
    RULE_if_statement = 18
    RULE_else_statement = 19
    RULE_if_statement_in_loop = 20
    RULE_else_statement_in_loop = 21
    RULE_for_statement = 22
    RULE_while_statement = 23
    RULE_return_statement = 24
    RULE_lvalue = 25
    RULE_expression = 26
    RULE_math_expression = 27
    RULE_term = 28
    RULE_math_operator = 29
    RULE_comparison_expression = 30
    RULE_boolean_value = 31
    RULE_logical_expression = 32
    RULE_and_or_expression = 33
    RULE_boolean_operator = 34
    RULE_literal = 35

    ruleNames =  [ "program", "main_function_definition", "function_definition", 
                   "parameter_list", "parameter", "type_specifier", "function_body", 
                   "write_function", "read_function", "statement", "simple_statement", 
                   "complex_statement", "statement_in_loop", "simple_statement_in_loop", 
                   "complex_statement_in_loop", "local_variable_declaration", 
                   "assignment_statement", "function_call", "if_statement", 
                   "else_statement", "if_statement_in_loop", "else_statement_in_loop", 
                   "for_statement", "while_statement", "return_statement", 
                   "lvalue", "expression", "math_expression", "term", "math_operator", 
                   "comparison_expression", "boolean_value", "logical_expression", 
                   "and_or_expression", "boolean_operator", "literal" ]

    EOF = Token.EOF
    SHORT_TP=1
    INT_TP=2
    FLOAT_TP=3
    DOUBLE_TP=4
    LONG_TP=5
    CHAR_TP=6
    BOOL_TP=7
    BOOLEAN_TRUE_LIT=8
    BOOLEAN_FALSE_LIT=9
    FUNCTION_KW=10
    BEGIN_KW=11
    END_KW=12
    IF_KW=13
    DO_KW=14
    ELSE_KW=15
    FOR_KW=16
    TO_KW=17
    WHILE_KW=18
    CONTINUE_KW=19
    BREAK_KW=20
    RETURN_KW=21
    EXCEPTION_KW=22
    MAIN_KW=23
    NO_KW=24
    WRITE_KW=25
    READ_KW=26
    IDENTIFIER=27
    INTEGER_LITERAL=28
    FLOAT_LITERAL=29
    CHAR_LITERAL=30
    LINE_COMMENT=31
    BLOCK_COMMENT=32
    TEXT_IN_QUOTES=33
    QUOT_MARK=34
    WS=35
    PARAMETER=36
    ADD_MATH_OP=37
    SUB_MATH_OP=38
    MUL_MATH_OP=39
    DIV_MATH_OP=40
    MOD_MATH_OP=41
    ASSIGN_OP=42
    EQUAL_BOOL_OP=43
    LESS_EQ_BOOL_OP=44
    GREATER_EQ_BOOL_OP=45
    NOT_EQ_BOOL_OP=46
    GREATER_BOOL_OP=47
    LESS_BOOL_OP=48
    OR_BIT_OP=49
    AND_BIT_OP=50
    RIGHT_SHIFT_BIT_OP=51
    LEFT_SHIFT_BIT_OP=52
    XOR_BIT_OP=53
    AND_LOGICAL_OP=54
    OR_LOGICAL_OP=55
    NOT_LOGICAL_OP=56
    LEFT_PAREN=57
    RIGHT_PAREN=58
    LEFT_SQUARE=59
    RIGHT_SQUARE=60
    COMMA=61
    SEMICOLON=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_function_definition(self):
            return self.getTypedRuleContext(ExprParser.Main_function_definitionContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def function_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Function_definitionContext)
            else:
                return self.getTypedRuleContext(ExprParser.Function_definitionContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.main_function_definition()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExprParser.FUNCTION_KW:
                self.state = 73
                self.function_definition()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_function_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_KW(self):
            return self.getToken(ExprParser.FUNCTION_KW, 0)

        def MAIN_KW(self):
            return self.getToken(ExprParser.MAIN_KW, 0)

        def LEFT_PAREN(self):
            return self.getToken(ExprParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(ExprParser.RIGHT_PAREN, 0)

        def BEGIN_KW(self):
            return self.getToken(ExprParser.BEGIN_KW, 0)

        def function_body(self):
            return self.getTypedRuleContext(ExprParser.Function_bodyContext,0)


        def END_KW(self):
            return self.getToken(ExprParser.END_KW, 0)

        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(ExprParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_main_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_function_definition" ):
                listener.enterMain_function_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_function_definition" ):
                listener.exitMain_function_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_function_definition" ):
                return visitor.visitMain_function_definition(self)
            else:
                return visitor.visitChildren(self)




    def main_function_definition(self):

        localctx = ExprParser.Main_function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(ExprParser.FUNCTION_KW)
            self.state = 82
            self.match(ExprParser.MAIN_KW)
            self.state = 83
            self.match(ExprParser.LEFT_PAREN)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.SHORT_TP) | (1 << ExprParser.INT_TP) | (1 << ExprParser.FLOAT_TP) | (1 << ExprParser.DOUBLE_TP) | (1 << ExprParser.LONG_TP) | (1 << ExprParser.CHAR_TP) | (1 << ExprParser.BOOL_TP))) != 0):
                self.state = 84
                self.parameter_list()


            self.state = 87
            self.match(ExprParser.RIGHT_PAREN)
            self.state = 88
            self.match(ExprParser.BEGIN_KW)
            self.state = 89
            self.function_body()
            self.state = 90
            self.match(ExprParser.END_KW)
            self.state = 91
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_KW(self):
            return self.getToken(ExprParser.FUNCTION_KW, 0)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def LEFT_PAREN(self):
            return self.getToken(ExprParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(ExprParser.RIGHT_PAREN, 0)

        def BEGIN_KW(self):
            return self.getToken(ExprParser.BEGIN_KW, 0)

        def function_body(self):
            return self.getTypedRuleContext(ExprParser.Function_bodyContext,0)


        def END_KW(self):
            return self.getToken(ExprParser.END_KW, 0)

        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def RETURN_KW(self):
            return self.getToken(ExprParser.RETURN_KW, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(ExprParser.Type_specifierContext,0)


        def NO_KW(self):
            return self.getToken(ExprParser.NO_KW, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(ExprParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = ExprParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ExprParser.FUNCTION_KW)
            self.state = 94
            self.match(ExprParser.IDENTIFIER)
            self.state = 95
            self.match(ExprParser.LEFT_PAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.SHORT_TP) | (1 << ExprParser.INT_TP) | (1 << ExprParser.FLOAT_TP) | (1 << ExprParser.DOUBLE_TP) | (1 << ExprParser.LONG_TP) | (1 << ExprParser.CHAR_TP) | (1 << ExprParser.BOOL_TP))) != 0):
                self.state = 96
                self.parameter_list()


            self.state = 99
            self.match(ExprParser.RIGHT_PAREN)
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.RETURN_KW]:
                self.state = 100
                self.match(ExprParser.RETURN_KW)
                self.state = 101
                self.type_specifier()
                pass
            elif token in [ExprParser.NO_KW]:
                self.state = 102
                self.match(ExprParser.NO_KW)
                self.state = 103
                self.match(ExprParser.RETURN_KW)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 106
            self.match(ExprParser.BEGIN_KW)
            self.state = 107
            self.function_body()
            self.state = 108
            self.match(ExprParser.END_KW)
            self.state = 109
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ParameterContext)
            else:
                return self.getTypedRuleContext(ExprParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = ExprParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.parameter()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExprParser.COMMA:
                self.state = 112
                self.match(ExprParser.COMMA)
                self.state = 113
                self.parameter()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_specifier(self):
            return self.getTypedRuleContext(ExprParser.Type_specifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def LEFT_SQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.LEFT_SQUARE)
            else:
                return self.getToken(ExprParser.LEFT_SQUARE, i)

        def RIGHT_SQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RIGHT_SQUARE)
            else:
                return self.getToken(ExprParser.RIGHT_SQUARE, i)

        def getRuleIndex(self):
            return ExprParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = ExprParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.type_specifier()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExprParser.LEFT_SQUARE:
                self.state = 120
                self.match(ExprParser.LEFT_SQUARE)
                self.state = 121
                self.match(ExprParser.RIGHT_SQUARE)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL_TP(self):
            return self.getToken(ExprParser.BOOL_TP, 0)

        def SHORT_TP(self):
            return self.getToken(ExprParser.SHORT_TP, 0)

        def INT_TP(self):
            return self.getToken(ExprParser.INT_TP, 0)

        def FLOAT_TP(self):
            return self.getToken(ExprParser.FLOAT_TP, 0)

        def DOUBLE_TP(self):
            return self.getToken(ExprParser.DOUBLE_TP, 0)

        def CHAR_TP(self):
            return self.getToken(ExprParser.CHAR_TP, 0)

        def LONG_TP(self):
            return self.getToken(ExprParser.LONG_TP, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_type_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_specifier" ):
                listener.enterType_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_specifier" ):
                listener.exitType_specifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_specifier" ):
                return visitor.visitType_specifier(self)
            else:
                return visitor.visitChildren(self)




    def type_specifier(self):

        localctx = ExprParser.Type_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_specifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.SHORT_TP) | (1 << ExprParser.INT_TP) | (1 << ExprParser.FLOAT_TP) | (1 << ExprParser.DOUBLE_TP) | (1 << ExprParser.LONG_TP) | (1 << ExprParser.CHAR_TP) | (1 << ExprParser.BOOL_TP))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_body" ):
                return visitor.visitFunction_body(self)
            else:
                return visitor.visitChildren(self)




    def function_body(self):

        localctx = ExprParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 131
                self.statement()
                self.state = 134 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.SHORT_TP) | (1 << ExprParser.INT_TP) | (1 << ExprParser.FLOAT_TP) | (1 << ExprParser.DOUBLE_TP) | (1 << ExprParser.LONG_TP) | (1 << ExprParser.CHAR_TP) | (1 << ExprParser.BOOL_TP) | (1 << ExprParser.IF_KW) | (1 << ExprParser.FOR_KW) | (1 << ExprParser.WHILE_KW) | (1 << ExprParser.RETURN_KW) | (1 << ExprParser.WRITE_KW) | (1 << ExprParser.READ_KW) | (1 << ExprParser.IDENTIFIER))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_functionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE_KW(self):
            return self.getToken(ExprParser.WRITE_KW, 0)

        def LEFT_PAREN(self):
            return self.getToken(ExprParser.LEFT_PAREN, 0)

        def TEXT_IN_QUOTES(self):
            return self.getToken(ExprParser.TEXT_IN_QUOTES, 0)

        def RIGHT_PAREN(self):
            return self.getToken(ExprParser.RIGHT_PAREN, 0)

        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def QUOT_MARK(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.QUOT_MARK)
            else:
                return self.getToken(ExprParser.QUOT_MARK, i)

        def PARAMETER(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.PARAMETER)
            else:
                return self.getToken(ExprParser.PARAMETER, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def type_specifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Type_specifierContext)
            else:
                return self.getTypedRuleContext(ExprParser.Type_specifierContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_write_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite_function" ):
                listener.enterWrite_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite_function" ):
                listener.exitWrite_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_function" ):
                return visitor.visitWrite_function(self)
            else:
                return visitor.visitChildren(self)




    def write_function(self):
